# HoleDet

./: .gitignore  CMakeLists.txt  README.md
cfg/: config.yaml
doc/: example_poses.csv  example_results_overview.csv
include/: HoleDetector.h
libs/: CMakeLists.txt
libs/include/: Normal2dEstimation.h  PCA2D.h  holedet_utils.h
libs/src/: Normal2dEstimation.cpp  PCA2D.cpp  holedet_utils.cpp
pcl_edge_detection/: CMakeLists.txt  main.cpp
pcl_edge_detection/data/: pcd_writer.py
pcl_mesh_approach/: CMakeLists.txt
pcl_mesh_approach/cfg/: config.yaml
pcl_mesh_approach/lib/: helpers.cpp  helpers.h
pcl_mesh_approach/src/: main.cpp
prototype/: CMakeLists.txt  main.cpp
src/: HoleDetector.cpp  main.cpp
