cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_edge_detection)
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_edge_detection main.cpp)
target_link_libraries(pcl_edge_detection ${PCL_LIBRARIES})
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBoost_USE_MULTITHREADED=OFF -pthread -lboost_thread")
find_package( Boost REQUIRED)
include_directories(${PROJECT_NAME} ${Boost_INCLUDE_DIRS})
link_directories(${PROJECT_NAME} ${Boost_LIBRARY_DIRS})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
